# corect_orientation

./: README.md  main.py  pyproject.toml
output/: test.preds.csv
utils/: model.py  path.py  work_images.py
utils/files/: model.json
