[tool.poetry]
name = "correct_orientation"
version = "0.1.0"
description = ""
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^1.14"
keras = "^2.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"
pandas = "^0.25.1"
opencv-python = "^4.1"
pillow = "^6.1"
matplotlib = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
